# WeatherReport

./: .gitignore  README.md  pyproject.toml
src/: index.py
src/apis/open_weather/: one_call_api.py
src/models/: weather.py
src/tools/: get_weather.py  open_weather.py
tests/: test.py
